axion-telemetry-query-manifests/axion-telemetry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-query-service
  labels:
    app: telemetry-query
spec:
  type: ClusterIP
  selector:
    app: telemetry-query
  ports:
  - port: 9000
    targetPort: 8000
