axion-telemetry-query-manifests/axion-telemetry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telemetry-query-ingress
  labels:
    app: telemetry-query
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: "/docs"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: telemetry-query.anupiyasingh.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: telemetry-query-service
            port:
              number: 9000
